--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
 
+# GitHub for Unity のAssetを無視。
+Assets/Plugins/GitHub/
+
 # Uncomment this line if you wish to ignore the asset store tools plugin
 # /[Aa]ssets/AssetStoreTools*
 
