--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@
 !/[Aa]ssets/**/*.meta
 
 # GitHub for Unity のAssetを無視。
-Assets/Plugins/GitHub/
+Assets/
 
 # Uncomment this line if you wish to ignore the asset store tools plugin
 # /[Aa]ssets/AssetStoreTools*
