--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
 
-# GitHub for Unity のAssetを無視。
+# Assetを無視。
 Assets/
 
 # Uncomment this line if you wish to ignore the asset store tools plugin
