--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@
 
 ##########################
 # Ignore GitHub Asset
-/[Aa]ssets/GitHub*
+/[Aa]ssets/Plugins/GitHub/
 
 ##########################
 
