--- a/.gitignore
+++ b/.gitignore
@@ -13,9 +13,11 @@
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
 
-# Assetを無視。
-Assets/
+##########################
+# Ignore GitHub Asset
+/[Aa]ssets/Plugins/GitHub/
 
+##########################
 # Uncomment this line if you wish to ignore the asset store tools plugin
 # /[Aa]ssets/AssetStoreTools*
 
